# hash-slinging-slasher

./: Cargo.toml  README.md
src/: bin.rs  dumper.rs  lib.rs  main.rs  sha2.rs
