[package]
name = "hash-slinging-slasher"
version = "0.1.0"
edition = "2021"

[lib]
name = "hash_slinging_slasher"
path = "src/lib.rs"

[[bin]]
name = "slasher"
path = "src/bin.rs"

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
hex = "0.4.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
